--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-server.port=8889
+
 
 
 #---------POSTGRE---------------
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/collegemgmt
 spring.datasource.username=postgres
+server.port=8889
+
 spring.datasource.password=developer
 spring.database.driverClassName=org.postgresql.Driver
 
@@ -17,3 +19,7 @@ spring.jpa.properties.hibernate.ddl-auto=none
 #spring.jpa.generate-ddl = true
 
 spring.liquibase.change-log=classpath:db./changelog/changelog-master.xml
+
+#security
+#spring.security.user.name=prasanna
+#spring.security.user.password=prasanna
